k8s/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-shortener-api
  namespace: url-shortener
spec:
  replicas: 2
  selector:
    matchLabels:
      app: url-shortener-api
  template:
    metadata:
      labels:
        app: url-shortener-api
    spec:
      containers:
      - name: api
        image: 734367008253.dkr.ecr.ap-south-1.amazonaws.com/url-shortener/link:d3a1219600c84eacb4ea39f5e7ab361b1b89d390
        ports:
        - containerPort: 8000
