k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener-api
  namespace: url-shortener
spec:
  selector:
    app: url-shortener-api
  ports:
  - port: 80
    targetPort: 8000
